ultimos cambios en el anteproyecto

--- a/doc/anteproyecto/main.bib
+++ b/doc/anteproyecto/main.bib
@@ -1,28 +1,5 @@
-@Article{Tw14,
-  author = 	 {Bowman, M. and Debray, S.K.and Peterson, L.L.},
-  title = 	 {Reasoning about naming systems},
-  journal = 	 {ACM Trans. Program. Lang. Syst.},
-  year = 	 {2014},
-  month = 	 {Apr},
-}
-
-@TechReport{Ding97,
-  author = 	 {Ding, W. and Marchionini, G.},
-  title = 	 {A Study on Video Browsing Strategies. Technical Report},
-  institution =  {University of Maryland at College Park},
-  year = 	 {1997},
-}
-
-@Book{Tavel07,
-  author = 	 {Tavel, P.},
-  title = 	 {Modeling and Simulation Design},
-  publisher = 	 {AK Peters Ltd.},
-  year = 	 {2007},
-  address = 	 {Natick, MA, USA},
-}
-
 @InBook{EIoT2Talk13,
-  author = 	 {Alessandro Bassi Martin Bauer Martin Fiedler Thorsten Kramp Rob van Kranenburg Sebastian Lange and Stefan Meissner},
+  author = 	 { Mukhopadhyay, Subhas Chandra (Ed.)},
   ALTeditor = 	 {},
   title = 	 {Enabling Things to Talk},
   chapter = 	 {Introduction to the Internet of Things},
@@ -31,41 +8,63 @@
   pages = 	 {1-10},
 }
 
-@InBook{Example,
-  author = 	 {Alessandro Bassi, Martin Bauer, Martin Fiedler, Thorsten Kramp, Rob van Kranenburg, Sebastian Lange, Stefan Meissner},
-  ALTeditor = 	 {},
-  title = 	 {Enabling Things to Talk},
+@InBook{CaSfIotPlatforms17,
+  author = 	 {Keramidas, Georgios, Voros, Nikolaos, Hübner, Michael (Eds.)},
+  title = 	 {Components and Services for IoT Platforms},
   chapter = 	 {Introduction to the Internet of Things},
   publisher = 	 {Springer Berlin Heidelberg},
   year = 	 {2013},
-  address = 	 {Cambridge, MA, USA.},
   pages = 	 {1-10},
 }
 
-@InProceedings{Frohlic00,
-  author = 	 {Fr\"ohlich, B. and Plate, J.},
-  title = 	 {The cubic mouse: a new device for three-dimensional input},
-  booktitle =    {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
-  year = 	 {2000},
-  pages = 	 {526-531},
-  month = 	 {April},
-  address = 	 {The Hague, The Netherlands},
-  organization = {ACM},
-  note = 	 {DOI= \url{http://doi.acm.org/10.1145/332040.332491}},
+@Inbook{Strohbach2016,
+author="Strohbach, Martin
+and Daubert, J{\"o}rg
+and Ravkin, Herman
+and Lischka, Mario",
+editor="Cavanillas, Jos{\'e} Mar{\'i}a
+and Curry, Edward
+and Wahlster, Wolfgang",
+title="Big Data Storage",
+bookTitle="New Horizons for a Data-Driven Economy: A Roadmap for Usage and Exploitation of Big Data in Europe",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="119--141",
+isbn="978-3-319-21569-3",
+doi="10.1007/978-3-319-21569-3_7",
+url="http://dx.doi.org/10.1007/978-3-319-21569-3_7"
 }
 
-@Misc{Steele04,
-  author = 	 {Steele, B.},
-  title = 	 {Look, Ma, no wires! Cornell class project tests wireless  networking},
-  howpublished = {\url{http://www.news.cornell.edu/Chronicle/00/5.18.00/wireless_class.html}},
-  month = 	 {February},
-  year = 	 {2004},
-  note = 	 {Cornell Chronicle, 31 from Columbia University},
+@Inbook{Shah2016,
+author="Shah, Mohak",
+editor="Japkowicz, Nathalie
+and Stefanowski, Jerzy",
+title="Big Data and the Internet of Things",
+bookTitle="Big Data Analysis: New Algorithms for a New Society",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="207--237",
+isbn="978-3-319-26989-4",
+doi="10.1007/978-3-319-26989-4_9",
+url="http://dx.doi.org/10.1007/978-3-319-26989-4_9"
 }
 
-@Misc{Oxygen,
-  title = 	 {MIT Project Oxygen: Overview},
-  howpublished = {\url{http://oxygen.lcs.mit.edu/Overview.html}},
-  year = 	 {2004},
-  note = 	 {Computer Science and Artificial Intelligence Laboratory, Massachusetts Institute of Technology},
+@Inbook{Ciobanu2014,
+author="Ciobanu, Radu-Ioan
+and Cristea, Valentin
+and Dobre, Ciprian
+and Pop, Florin",
+editor="Bessis, Nik
+and Dobre, Ciprian",
+title="Big Data Platforms for the Internet of Things",
+bookTitle="Big Data and Internet of Things: A Roadmap for Smart Environments",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="3--34",
+isbn="978-3-319-05029-4",
+doi="10.1007/978-3-319-05029-4_1",
+url="http://dx.doi.org/10.1007/978-3-319-05029-4_1"
 }
