--- a/doc/anteproyecto/main.bib
+++ b/doc/anteproyecto/main.bib
@@ -9,7 +9,7 @@
 }
 
 @InBook{CaSfIotPlatforms17,
-  author = 	 {Keramidas, Georgios, Voros, Nikolaos, Hübner, Michael (Eds.)},
+  author = 	 {Keramidas and Georgios and Voros and Nikolaos and Hübner and Michael (Eds.)},
   title = 	 {Components and Services for IoT Platforms},
   chapter = 	 {Introduction to the Internet of Things},
   publisher = 	 {Springer Berlin Heidelberg},
