--- a/doc/anteproyecto/main.tex
+++ b/doc/anteproyecto/main.tex
@@ -1,8 +1,8 @@
 \documentclass{pre-tfg}
 \usepackage{url}
 \usepackage{graphicx}
-\graphicspath{ {images/} }
-%\showhelp  % comenta o borra para eliminar ayudas
+
+% \showhelp  % comenta o borra para eliminar ayudas
 
 \title{Sense: Plataforma de alto rendimiento para captura y procesado de eventos IoT}
 \author{David Martín García}
@@ -205,8 +205,8 @@ actividades académicas.
 \begin{itemize}
 \item Hito 1 - Analisis
   \begin{itemize}
-  \item 
-  \item 
+  \item
+  \item
   \item Realización de la documentación inicial y puesta a punto de los
     diferentes servicios involucrados en el desarrollo
   \end{itemize}
@@ -225,6 +225,7 @@ actividades académicas.
   \item Desarrollo de la interfaz web
   \item Desarrollo del backend de análisis de datos
   \end{itemize}
+\end{itemize}
 
 \clearpage
 \section{MEDIOS QUE SE PRETENDEN UTILIZAR}
