adding latest version of TFG template

--- a/doc/tfg/intro.tex
+++ b/doc/tfg/intro.tex
@@ -41,6 +41,10 @@ capítulos restantes.
 \blinditemize[4]
 \blindmathpaper
 
+\section{Otra sección}
+
+\blindtext
+
 
 % Local Variables:
 %  coding: utf-8
