adding introduction and some notes about good points to write, index draft

--- a/doc/tfg/intro.tex
+++ b/doc/tfg/intro.tex
@@ -10,6 +10,37 @@ autor propone para su resolución. El lector debería poder determinar si este
 documento le interesa leyendo únicamente la introducción.
 
 
+\drop{D}ia a dia miles de sensores toman datos de nuestro entorno, ya sea para controlar las luces de un semaforo, manejar una cadena de montaje, o predecir el
+tiempo, todos esos sensores dan información del medio en el que se
+encuentran. Toda esta tendencia no hace nada mas que crecer, la cantidad de sensores se ve incrementada de forma
+exponencial, tanto que recientemente podemos haber escuchado hablar de conceptos
+como el Internet de las Cosas (en ingles Internet of Things o Iot), M2M o de las
+smart cities, todos estos conceptos tienen en común la necesidad de la toma de
+datos por parte de sensores y la posterior comunicación para notificar del valor
+obtenido, todo esto hace que millones de lecturas deban ser manejadas de una
+forma eficiente y sobre todo a un bajo coste. Recientemente hemos podido ver
+como el número de plataformas ligadas al almacenamiento de datos relacionados con IoT ha crecido de forma tambien exponencial.
+
+La mayoria de estos solo te permiten, dentro del plan gratuito, unas cuotas de
+datos irrisorias para cualquier pequeño conjunto de sensores, teniendo que
+sacrificar resolución, ademas de tener una baja persistencia, ya que los datos son borrados pasado un tiempo. Una vez salimos del plan gratuito, los precios pueden llegar a dispararse.
+
+El conjunto de todos estos detalles es lo que da forma a este proyecto, donde se
+busca obtener una solución eficiente, con el minimo coste y con una maxima tasa
+de disponibilidad. Aunar todos estos requisitos es
+complicado, por lo que, se requerira de un exaustivo analisis de las diferentes
+opciones existentes eligiendo la mejor opción posible de todas las existentes
+dentro de cada categoria, este proyecto llevara a cada tecnologia involucrada a
+su maximo exponente.
+
+Como punto final, el proyecto sera planificado mediante metodologias agiles,
+mediante la planificación de pequeños sprints, desarrollo guiado por
+tests, integración continua y despliege continuo 
+
+Nota de prensa IoT, IBM: http://www-03.ibm.com/press/es/es/presskit/50110.wss
+plataformas: AWS IoT, Azure IoT, Google Cloud IoT, IBM.
+Servicios: Thingspeak, Carriots, Adafruit IO, Sentilo, Devicehive, Smart Cities as a Service, Pubnub, Thingworx, Temboo, Blink, Thethings, Ubidots, 2lemetry, Onion Cloud.
+
 \section{Título del proyecto}
 
 En la portada ---y otras páginas de presentación--- el nombre o título del
