--- a/doc/tfg/metadata.tex
+++ b/doc/tfg/metadata.tex
@@ -1,6 +1,7 @@
 %% -- Información general --
-\title{Plantilla para Memoria de\\Trabajo Fin de Grado}
-\author{Juan Nadie Conocido}{}
+\title{Sense: \\Plataforma de alto rendimiento para
+captura y procesado de eventos IoT}
+\author{David Martín García}{}
 
 
 %% -- Variables de la clase esi-tfg --
@@ -10,17 +11,17 @@
 %\address{}
 %\city{}
 %\country{}
-\email{Juan.Nadie@uclm.es}
-\phone{123 456 789}
+\email{davidmartingarcia0@gmail.com}
+\phone{601 407 688}
 % \homepage{http://esi.uclm.es/~juan.nadie}
 
 
 %- datos del documento
 
 %\logo{informatica.pdf}
-\advisorFirst{Dr. Fulanito de Tal}
+\advisorFirst{David Villa Alises}
 \advisorDepartment{Tecnologías y Sistemas de Información}
-%\advisorSecond{Dr. Menganito}
-\docdate{2016}{Mayo}
-\intensification{Ingeniería de Computadores}
+\advisorSecond{María José Santofimia Romero}
+\docdate{2017}{Julio}
+\intensification{Computación}
 %\license{Texto de licencia al gusto de cada uno.}
