skeleton of the document

--- a/doc/tfg/acro.tex
+++ b/doc/tfg/acro.tex
@@ -5,6 +5,12 @@
   \Acro{GNU}     {\acs{GNU} is Not Unix}
   \acro{OO}      {Orientación a Objetos}
   \acro{RPC}     {Remote Procedure Call}
+  \acro{IoT}     {Internet of Things}
+  \acro{API}     {Application Programming Interface}
+  \acro{REST}    {Representational State Transfer}
+  \acro{M2M}    {Machine to Machine}
+  \Acro{PMV}    {Producto Minimo Viable (\acs{MVP})}
+  \acro{MVP}    {Minimum Viable Product}
 \end{acronym}
 }
 
