--- a/doc/tfg/main.tex
+++ b/doc/tfg/main.tex
@@ -30,9 +30,11 @@
 \input{intro.tex}
 \input{objetivos.tex}
 \input{antecedentes.tex}
-%\input{metodo.tex}
-%\input{resultados.tex}
-%\input{conclusiones.tex}
+\input{metodo.tex}
+\input{arquitectura.tex}
+\input{resultados.tex}
+\input{trabajos_futuros.tex}
+\input{conclusiones.tex}
 
 \backmatter
 
