--- a/doc/tfg/intro.tex
+++ b/doc/tfg/intro.tex
@@ -1,45 +1,95 @@
 \chapter{Introducción}
 
-\drop{E}{sto} se llama «letra capital» y debería utilizarse únicamente al
-comienzo de capítulo como artificio decorativo. Para que resulte estéticamente
-adecuada, este primer párrafo debería tener más del doble de líneas de lo que
-ocupe verticalmente la letra capital (dos en este caso). El capítulo de
-introducción debe dar al lector una perspectiva básica ---pero completa--- del
-problema que se pretende abordar, pero también de la estrategia y enfoque que el
-autor propone para su resolución. El lector debería poder determinar si este
-documento le interesa leyendo únicamente la introducción.
+%\drop{E}{sto} se llama «letra capital» y debería utilizarse únicamente al
+%comienzo de capítulo como artificio decorativo. Para que resulte estéticamente
+%adecuada, este primer párrafo debería tener más del doble de líneas de lo que
+%ocupe verticalmente la letra capital (dos en este caso). El capítulo de
+%introducción debe dar al lector una perspectiva básica ---pero completa--- del
+%problema que se pretende abordar, pero también de la estrategia y enfoque que el
+%%autor propone para su resolución. El lector debería poder determinar si este
+%documento le interesa leyendo únicamente la introducción.
 
 
-\drop{D}ia a dia miles de sensores toman datos de nuestro entorno, ya sea para controlar las luces de un semaforo, manejar una cadena de montaje, o predecir el
-tiempo, todos esos sensores dan información del medio en el que se
-encuentran. Toda esta tendencia no hace nada mas que crecer, la cantidad de sensores se ve incrementada de forma
-exponencial, tanto que recientemente podemos haber escuchado hablar de conceptos
-como el Internet de las Cosas (en ingles Internet of Things o Iot), M2M o de las
-smart cities, todos estos conceptos tienen en común la necesidad de la toma de
-datos por parte de sensores y la posterior comunicación para notificar del valor
-obtenido, todo esto hace que millones de lecturas deban ser manejadas de una
-forma eficiente y sobre todo a un bajo coste. Recientemente hemos podido ver
-como el número de plataformas ligadas al almacenamiento de datos relacionados con IoT ha crecido de forma tambien exponencial.
+\drop{E}{l} ser humano siempre ha tenido la curiosidad de explorar su entorno,
+conocerlo más de cerca y analizar los sucesos que ocurren en este, se podria
+decir que se ve atraído por lo que no conoce, e intenta clasificarlo y sacar
+conclusiones, en el pasado, todo este proceso de obtención de información se
+realizaba de manera manual, pero por suerte, a dia de hoy tenemos elementos que
+se encargan se esta labor, son los sensores, que nos permiten obtener datos de
+una forma programática para procesarlos posteriormente.
 
-La mayoria de estos solo te permiten, dentro del plan gratuito, unas cuotas de
+En los últimos años podemos presenciar un creciente interés en la
+tematica relacionada con la sensorización, existe una gran cantidad de
+comunidad en torno a esta y esta surgiendo infinidad de plataformas hardware que
+ven en la sensorización su mayor fuerza, como hemos dicho anteriormente, estos
+dispositivos tienen la capacidad de ofrecernos información del entorno, pudiendo
+esta servir en infinidad de casos, como por ejemplo: 
+\begin{itemize}
+\item Análisis del clima
+\item Detección temprana de catástrofes
+\item Gestión de una cadena de montaje.
+\item Monitorización de los niveles de radiación en una central nuclear
+\end{itemize}
+
+Todos estos sensores son cada vez mas comunes en nuestro entorno, tanto que, ciudades enteras se
+nutren de estos para la toma de decisiones críticas, un ejemplo de esto es la
+capital de España, Madrid, cuyos sensores de polución han causado más de una
+noticia en televisión, con los datos recogidos por estos sensores se deciden
+temas tan importantes que afectan a la salud de estos ciudadanos.
+
+Toda esta tendencia no hace nada más que crecer, la cantidad de
+sensores se ve incrementada de forma exponencial, tanto que recientemente
+podemos haber escuchado hablar de conceptos como el Internet de las Cosas (en
+inglés Internet of Things o \acs{IoT}), \acs{M2M} (Machine to machine) o de las Smart
+Cities. Todos estos
+conceptos tienen en común la necesidad de la toma de datos por parte de sensores
+y la posterior comunicación para notificar del valor obtenido, todo esto hace
+que millones de lecturas tengan que ser manejadas de una forma eficiente y sobre todo
+a un bajo coste.
+
+\newpage
+Por otra parte, toda esta tendencia ha venido acompañada de una serie de
+plataformas, estas tratan de solucionar los problemas de comunicación así como
+de almacenamiento hablados anteriormente, en concreto hemos podido ver como el número de plataformas ligadas al almacenamiento de datos relacionados con \acs{IoT} ha crecido de forma también exponencial.
+La mayoría de estos solo te permiten, dentro del plan gratuito, unas cuotas de
 datos irrisorias para cualquier pequeño conjunto de sensores, teniendo que
 sacrificar resolución, ademas de tener una baja persistencia, ya que los datos son borrados pasado un tiempo. Una vez salimos del plan gratuito, los precios pueden llegar a dispararse.
 
 El conjunto de todos estos detalles es lo que da forma a este proyecto, donde se
-busca obtener una solución eficiente, con el minimo coste y con una maxima tasa
+busca obtener una solución eficiente, con el mínimo coste y con una máxima tasa
 de disponibilidad. Aunar todos estos requisitos es
-complicado, por lo que, se requerira de un exaustivo analisis de las diferentes
+complicado, por lo que, se requerirá de un exhaustivo análisis de las diferentes
 opciones existentes eligiendo la mejor opción posible de todas las existentes
-dentro de cada categoria, este proyecto llevara a cada tecnologia involucrada a
-su maximo exponente.
+dentro de cada categoría. Este proyecto llevará a cada tecnología involucrada a
+su máximo exponente, conceptos como el uso hibrido de bases de datos, que nos
+permiten seleccionar para cada momento donde almacenar la información en función
+del mejor tiempo de respuesta,
+tecnologias web bien probadas durante años en el campo de las telecomunicaciones
+formarán parte de nuestras herramientas para poner solución al problema de tener millones de
+sensores conectados.
 
-Como punto final, el proyecto sera planificado mediante metodologias agiles,
+Otro punto a destacar es el que todo lo desarrollado será software libre, donde
+cualquier persona podrá consultar como funciona, mejorarlo, o incluso, realizar
+su propia solución. Con todo esto se busca crear una nueva plataforma
+open-source, uno de los pocos casos en este campo, buscando poner un punto de
+partida donde, en un futuro, exista un proyecto colaborativo que se maneje por
+la propia comunidad.
+
+Como punto final, el proyecto será planificado mediante metodologías ágiles,
 mediante la planificación de pequeños sprints, desarrollo guiado por
-tests, integración continua y despliege continuo 
+test y integración continua, así como despliegue continuo, pudiendo controlar
+cada una de las fases del software de una forma exhaustiva.
 
-Nota de prensa IoT, IBM: http://www-03.ibm.com/press/es/es/presskit/50110.wss
-plataformas: AWS IoT, Azure IoT, Google Cloud IoT, IBM.
-Servicios: Thingspeak, Carriots, Adafruit IO, Sentilo, Devicehive, Smart Cities as a Service, Pubnub, Thingworx, Temboo, Blink, Thethings, Ubidots, 2lemetry, Onion Cloud.
+Con todo esto, este proyecto pretende ser una alternativa respecto a las actuales plataformas de
+gestión de datos relacionados con la sensorización. <<Sense>>  nace como un nuevo
+candidato en un mundo en el que, sus actuales competidores, no son lo suficiente
+eficientes para poder mantener los costes a un nivel bajo. Partimos con la
+ventaja de aprender de sus errores, y con la posibilidad de mejorar lo
+actualmente existente.
+
+%Nota de prensa IoT, IBM: http://www-03.ibm.com/press/es/es/presskit/50110.wss
+%plataformas: AWS IoT, Azure IoT, Google Cloud IoT, IBM.
+%Servicios: Thingspeak, Carriots, Adafruit IO, Sentilo, Devicehive, Smart Cities as a Service, Pubnub, Thingworx, Temboo, Blink, Thethings, Ubidots, 2lemetry, Onion Cloud.
 
 \section{Título del proyecto}
 
