--- a/doc/tfg/intro.tex
+++ b/doc/tfg/intro.tex
@@ -91,40 +91,40 @@ actualmente existente.
 %plataformas: AWS IoT, Azure IoT, Google Cloud IoT, IBM.
 %Servicios: Thingspeak, Carriots, Adafruit IO, Sentilo, Devicehive, Smart Cities as a Service, Pubnub, Thingworx, Temboo, Blink, Thethings, Ubidots, 2lemetry, Onion Cloud.
 
-\section{Título del proyecto}
+%\section{Título del proyecto}
 
-En la portada ---y otras páginas de presentación--- el nombre o título del
-proyecto debe aparecer sin comillas, cursiva u otros formatos. Si se cita el
-título de otra obra, o el nombre de un capítulo sí debe aparecer entre
-comillas. Por cierto, las comillas que deben usarse en castellano son las
-«latinas», dejando las ``inglesas'' para los raros casos en los que aparezca una
-cita en el cuerpo otra~\cite{sousa}.
-
-
-\section{Estructura del documento}
-
-Pueden incluirse aquí una sección con algunos consejos para la lectura del
-documento dependiendo de la motivación o conocimientos del lector.  También
-puede ser útil incluir una lista con el nombre y finalidad de cada uno de los
-capítulos restantes.
-
-\begin{definitionlist}
-\item[Capítulo \ref{chap:antecedentes}: \nameref{chap:antecedentes}] Explica herramientas
-  y aspectos básicos de edición con \LaTeX.
-\item[Capítulo \ref{chap:objetivos}: \nameref{chap:objetivos}] Finalidad y justificación
-  (con todo detalle) del presente documento.
-\end{definitionlist}
+%En la portada ---y otras páginas de presentación--- el nombre o título del
+%proyecto debe aparecer sin comillas, cursiva u otros formatos. Si se cita el
+%título de otra obra, o el nombre de un capítulo sí debe aparecer entre
+%comillas. Por cierto, las comillas que deben usarse en castellano son las
+%«latinas», dejando las ``inglesas'' para los raros casos en los que aparezca una
+%cita en el cuerpo otra~\cite{sousa}.
 
 
-\section{Más texto para que ocupe varias páginas}
+%\section{Estructura del documento}
 
-\blindtext
-\blinditemize[4]
-\blindmathpaper
+%Pueden incluirse aquí una sección con algunos consejos para la lectura del
+%documento dependiendo de la motivación o conocimientos del lector.  También
+%puede ser útil incluir una lista con el nombre y finalidad de cada uno de los
+%capítulos restantes.
 
-\section{Otra sección}
+%\begin{definitionlist}
+%\item[Capítulo \ref{chap:antecedentes}: \nameref{chap:antecedentes}] Explica herramientas
+%  y aspectos básicos de edición con \LaTeX.
+%\item[Capítulo \ref{chap:objetivos}: \nameref{chap:objetivos}] Finalidad y justificación
+%%  (con todo detalle) del presente documento.
+%\end{definitionlist}
 
-\blindtext
+
+%\section{Más texto para que ocupe varias páginas}
+
+%\blindtext
+%\blinditemize[4]
+%\blindmathpaper
+
+%\section{Otra sección}
+
+%\blindtext
 
 
 % Local Variables:
