lastest changes, unreleased, it needs some syntax and grammar checks

--- a/doc/tfg/objetivos.tex
+++ b/doc/tfg/objetivos.tex
@@ -42,10 +42,10 @@ de tal proyecto:
 
 \subsection{Análisis y selección del conjunto de elementos del
 proyecto:} Comparativa del rendimiento de los actuales frameworks web así como de la
-infraestructura necesaria para este proyecto. Dado que una de las máximas de
+infraestructura necesaria. Dado que una de las máximas de
 este proyecto será un elevado rendimiento a un coste bajo, se seleccionará entre
 todos los candidatos el que mejor se adapte ante esta situación para cada una de
-las partes involucradas en este proyecto.
+las partes involucradas.
 
 \subsection{Identificación y análisis de los datos ligados al internet de las
   cosas (IoT):} Identificar posibles estándares ligados a este concepto, además de desarrollar la
@@ -112,8 +112,8 @@ a mover estos cambios a cualquier entorno.
 permita evaluar el resultado final del rendimiento de la plataforma así como su
 estabilidad y la corrección de cada uno de los puntos.
 
-\subsection{Búsqueda de partners:} Busqueda de socios tecnológicos con los que
-probar la aplicación una vez éste en el mercado, permitiendo un posicionamiento
+\subsection{Búsqueda de partners:} Búsqueda de socios tecnológicos con los que
+probar la aplicación una vez esté en el mercado, permitiendo un posicionamientoe
 más rápido así como una prueba inicial de las cualidades del servicio en un
 entorno real.
 
